<resources>
    <string name="app_name">Meest</string>
    <string name="app_name_metme">Met me</string>
    <string name="todo">todo</string>
    <string name="Travel">#Travel</string>
    <string name="Movie">#Movie</string>
    <string name="Food">#Food</string>
    <string name="Arts">#Arts</string>
    <string name="Photography">#Photography</string>
    <string name="thePartybash">#thePartybash</string>
    <string name="View_all">View all</string>
    <string name="less_than_20_posts">less than 20 posts</string>
    <string name="SignUpto">Sign Up to access all the features</string>
    <string name="SignUpto_1"> in Meest app.</string>
    <string name="whatsyourname">What is Your Name ?</string>
    <string name="continuee">Continue</string>
    <string name="female">Female</string>
    <string name="otpverify">Verification Code</string>
    <string name="send_again">Send Again</string>
    <string name="otptxt">Enter the 4 digits code that we have sent \n to your mobile number or email \n address.</string>
    <string name="skip">Skip</string>
    <string name="upload">Upload</string>
    <string name="interest">Choose Your Interest</string>
    <string name="JoinandCreate">Join and Create(Medley)</string>
    <string name="JoinandCreatetxt">Watch, share and express \n yourself with creativity in \n a world full of interesting \n video content.</string>
    <string name="JoinandConnect">Chat, Call, create group \n and stay connected with \nthis revolutionary way to \n stay social and trendy.</string>
    <string name="JoinandConnecttxt">Join and Connect(Meest)</string>
    <string name="interest_txt">Choose few topics that you are interested</string>
    <string name="interest_txt_1">in, so you can follow the trend</string>
    <string name="welcomeback">Welcome Back</string>
    <string name="EnterPass">Enter Your Password</string>
    <string name="forgpass"><u>Forgot Password</u></string>
    <string name="forgpassd">Forgot Password</string>
    <string name="forgpass1">Enter Your existing email address or mobile  \n number for the verification process and \n you will receive 4 digit code to reset \n your password.</string>
    <string name="login_to_your_existing_account_to_access_nall_the_features_in_meest_app">Login to your existing account to access <br /> all the features in Meest App.</string>
    <string name="verification_code">Verification Code</string>
    <string name="forgetPassotp">Enter the 4 digits code that we have sent to your mobile number or email address and continue to reset your password.</string>
    <string name="enter_email_or_mobile_number">Enter Email\n or\nMobile Number</string>
    <string name="upload_your_profile_picture">Upload \n Your Profile Picture</string>
    <string name="bysignupyouagree">By Sign Up you agree with our</string>
    <string name="comingsoon">Coming\nSoon&#8230;</string>
    <string name="default_theme">Default Theme</string>
    <string name="dark">Dark Theme</string>
    <string name="discover">Discover</string>
    <string name="host">cutomerdemo.in/</string>
    <string name="action_send">Send</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_record">Record Video</string>
    <string name="ok">OK</string>
    <string-array name="InterestValue">
        <item>Games,Books</item>
    </string-array>
    <string name="dots">...</string>
    <string name="success_unblocked">Successfully Unblocked</string>
    <string name="you_hav_reached_">You have reached maximum connection limit</string>
    <string name="sendFeedback">Send Feedback</string>
    <string name="blockedList">Blocked List</string>
    <string name="privacy">Privacy and Security Help</string>
    <string name="faq">FAQ</string>
    <string name="submit">Submit</string>
    <string name="enter_feedback">Please enter feedback.</string>
    <string name="feedback_uploaded">Feedback send successfully.</string>
    <string name="enter_post_caption">Please enter captions.</string>
    <string name="post_shared_wall">Shared to wall successfully.</string>
    <string name="post_uploaded">Feedback send successfully.</string>
    <string name="privacy_only">privacy</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="following">Following</string>
    <string name="share_using">Share refferal Code</string>
    <string name="share_subject">Meest App</string>
    <string name="referral_msg">"Please join me over Meest using the referral code : "</string>
    <string name="male">Male</string>
    <string name="google_maps_key">AIzaSyDcRd8kn1lhjYdEAkGR6Ns7VUPE5YsRIOs</string>
    <string name="deleteStory">Delete Story</string>
    <string name="areSure">Are you sure ?</string>
    <string name="deleteStoryText">Do you really want to delete this story</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="story_deleted_success">Story deleted successfully</string>
    <string name="title_activity_r_t_c_audio_call_join">RTCAudioCallJoin</string>
    <string name="selected_count">%d selected</string>
    <string name="your" translatable="false"><font fgcolor="#000000">your</font></string>
    <string name="label_send">Send</string>
    <string name="msg_say_something">Say something…</string>
    <string name="msg_connection_error">Connection error, please check the network settings or make sure channel name/access token are valid</string>
    <string name="bit_rate_value_with_unit">%d kbps</string>
    <string name="frame_rate_value_with_unit">%d fps</string>
    <string name="start_broadcast_title">Start Live Streaming</string>
    <string name="topic_edit_hint">Enter a channel name</string>
    <string name="powered_by_agora" translatable="false">Powered by agora.io</string>
    <string name="need_necessary_permissions">Necessary permissions acquired</string>
    <string name="setting_title">Settings</string>
    <string name="setting_resolution_title">Resolution</string>
    <string name="setting_stats_title">Show video statistics</string>
    <string name="setting_mirror_local_title">Local video preview mirror mode</string>
    <string name="setting_mirror_remote_title">Remote video render mirror mode</string>
    <string name="setting_mirror_encode_title">Local video encode mirror mode</string>
    <string name="fake_user_name" translatable="false">Shakespeare</string>
    <string name="select_role_title">Please choose your role</string>
    <string name="select_role_broadcaster">Broadcaster</string>
    <string name="select_role_audience">Audience</string>
    <string name="select_role_broadcaster_hint">Join as broadcaster</string>
    <string name="select_role_audience_hint">Join as audience</string>
    <string name="error_msg">Something went wrong!!</string>
    <string name="uploadvideo">Upload Video</string>
    <string name="describe">Describe</string>
    <string name="awesomecaption">Enter Caption</string>
    <string name="postsettings">Post Settings</string>
    <string name="allowsavetophone">Allow Save To Phone</string>
    <string name="allowduet">Allow Duet</string>
    <string name="Enter_Mobile_Number_or_Email_Address">Enter Mobile Number or Email Address</string>
    <string name="Email_address_does_not_exists">Email address does not exists</string>
    <string name="searchmusic">Search Music</string>
    <string name="sendcoin">Send Diamond</string>
    <string name="creatorwillbenotified">Creator will be notified about\nthe diamonds gifted by you</string>
    <string name="cancelss">Cancel</string>
    <string name="bethefirsttocommentnandknownbythecreator">Be the first to comment\nand known by the creator</string>
    <string name="famouscreators">Famous creators</string>
    <string name="shop">Shop</string>
    <string name="selectreason">Select Reason</string>
    <string name="howithurtsyo">How it hurts you</string>
    <string name="contactdetails">Contact Details</string>
    <string name="mailormobile">Mail or Mobile</string>
    <string name="report">Report</string>
    <string name="sharethisvideo">Share This Video</string>
    <string name="reportpost">Report Post</string>
    <string name="fans">5.0m Fans</string>
    <string name="follow">Follow</string>
    <string name="byclickingthissubmitbutton">By clicking this submit button, you agree that you are taking all the responsibilities of all the process that may be done by us or the content uploader.Click the link below to know more about that.</string>
    <string name="explainbriefly">Explain Briefly</string>
    <string name="oops">Oops !</string>
    <string name="nothingtoshow">Nothing to show...</string>
    <string name="choosecategory">Choose Category</string>
    <string name="notifications">Notifications</string>
    <string name="typeyourcommenthere">Type your comment here..</string>
    <string name="helppolicy">Help/Policy center</string>
    <string name="requestredeem">Request Redeem</string>
    <string name="wheneveryouuploadvideo">Whenever you upload video</string>
    <string name="purchasedddjjd">Every 10 mins spend in App</string>
    <string name="rewardingactions">REWARDING ACTIONS</string>
    <string name="purchased">PURCHASED</string>
    <string name="fromyourfans">From your fans</string>
    <string name="close">close</string>
    <string name="delete">Delete</string>
    <string name="Mute">Mute</string>
    <string name="Turn_On_Post_Notification">Turn On Post Notification</string>
    <string name="Report">Report</string>
    <string name="Copy_Link">Copy Link</string>
    <string name="Share_to">Share to...</string>
    <string name="Unfollow">Unfollow</string>
    <string name="Chat">Chat</string>
    <string name="Report_Post">Report Post</string>
    <string name="Delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="open_conversation">Open Conversation</string>
    <string name="snooze_conversation">Snooze Conversation</string>
    <string name="mark_as_priority">Mark as priority</string>
    <string name="share_conversation">Share Conversation</string>
    <string name="add_a_member">Add a member</string>
    <string name="edit">Edit</string>
    <string name="remove_this_notification">Remove this notification</string>
    <string name="thanks_you_re_all_set">Thanks, you\'re all set.</string>
    <string name="we_got_your_reply_thank_you_for_your_interest_in_our_business_set_up_package_one_of_your_team_members_will_be_in_touch_with_you_via_phone_and_or_email_within_24_business_hours">We got your reply! Thank you for your interest in our business set up package.One of your team members will be in touch with you via phone and/ or email within 24 business hours.</string>
    <string name="show_newly_downloaded_media_nfrom_this_chat_in_your_phone_s_ngallery">Show newly downloaded media \nfrom this chat in your phone’s \ngallery ?</string>
    <string name="default_yes">Default (yes)</string>
    <string name="delete_post">Delete Post</string>
    <string name="block_user">Block User</string>
    <string name="confirm_your_account">Confirm your Account</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="post_to_other_apps">Post to Other Apps</string>
    <string name="archive">Archive</string>
    <string name="copy_link">Copy Link</string>
    <string name="share_to">Share to...</string>
    <string name="turn_off_commenting">Turn Off Commenting</string>
    <string name="are_you_sure">Discard this video?</string>
    <string name="Deactivate_Account">Deactivate Account</string>
    <string name="All_your_data_will_be_deleted">All your data will be deleted.</string>
</resources>