<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_demo"
        android:textColor="#0A1F44"
        android:textSize="17sp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/post_to_other_apps"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#0A1F44"
        android:textSize="17sp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/archive"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#0A1F44"
        android:textSize="17sp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/copy_link"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#0A1F44"
        android:textSize="17sp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/share_to"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#0A1F44"
        android:textSize="17sp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/edit"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#0A1F44"
        android:textSize="17sp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/delete"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#0A1F44"
        android:textSize="17sp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/turn_off_commenting"/>

</LinearLayout>