<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_demo"
        android:textColor="#0A1F44"
        android:textSize="17sp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/open_conversation"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#0A1F44"
        android:textSize="17sp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/snooze_conversation"/>

<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textColor="#0A1F44"-->
<!--        android:textSize="17sp"-->
<!--        android:layout_marginLeft="@dimen/_10sdp"-->
<!--        android:padding="@dimen/_10sdp"-->
<!--        android:text="Archive Conversation"/>-->


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#0A1F44"
        android:textSize="17sp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/mark_as_priority"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#0A1F44"
        android:textSize="17sp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/share_conversation"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#3B5998"
        android:textSize="17sp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/add_a_member"/>



</LinearLayout>