<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layoutDirection="ltr"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_shareTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:padding="@dimen/_10sdp"
                android:text="@string/Share_to"
                android:textColor="#0A1F44"
                android:textSize="17sp"
                android:visibility="visible" />
            <TextView
                android:id="@+id/txt_copyLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:padding="@dimen/_10sdp"
                android:text="@string/Copy_Link"
                android:textColor="#0A1F44"
                android:textSize="17sp" />
            <TextView
                android:id="@+id/txt_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:padding="@dimen/_10sdp"
                android:text="@string/Chat"
                android:visibility="gone"
                android:textColor="#0A1F44"
                android:textSize="17sp" />
            <TextView
                android:id="@+id/txt_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginLeft="@dimen/_10sdp"
                android:padding="@dimen/_10sdp"
                android:text="@string/Turn_On_Post_Notification"
                android:textColor="#0A1F44"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/txt_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:padding="@dimen/_10sdp"
                android:text="@string/Report"
                android:textColor="#0A1F44"
                android:textSize="17sp" />
            <TextView
                android:id="@+id/txt_unfollow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:padding="@dimen/_10sdp"
                android:text="@string/Unfollow"
                android:visibility="gone"
                android:textColor="#0A1F44"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/txt_mute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:padding="@dimen/_10sdp"
                android:text="@string/Mute"
                android:textColor="#0A1F44"
                android:textSize="17sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txt_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:padding="@dimen/_10sdp"
                android:text="@string/Delete"
                android:textColor="#0A1F44"
                android:textSize="17sp"
                android:visibility="gone" />


        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>