<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="72dp"
    android:layoutDirection="ltr"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/Deactivate_Account"
        android:textColor="@color/edit_line_red"
        android:textSize="18dp" />

    <View
        android:layout_width="160dp"
        android:layout_height="0.5dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:text="@string/are_you_sure" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="@string/All_your_data_will_be_deleted" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="48dp"
            android:background="@drawable/main_btn_bg"
            android:text="@string/confirm"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnClose"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/main_btn_bg"
            android:text="@string/cancel"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>