<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="72dp"
    android:layoutDirection="ltr"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_your_account"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        />

    <View
        android:layout_width="160dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:gravity="center_horizontal"
        android:textSize="17dp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#99A9A9A9"
        android:id="@+id/edPassword"
        android:paddingLeft="@dimen/_30sdp"
        android:inputType="textPassword"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@android:color/transparent"
        android:hint="@string/enter_your_password"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
   android:gravity="center_horizontal"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="@dimen/_30sdp">

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="48dp"
        android:text="@string/submit"
        android:background="@drawable/main_btn_bg"
        android:textColor="@color/white"/>


    <Button
        android:id="@+id/btnCancel"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="48dp"
        android:text="@string/cancel"
        android:layout_marginStart="20dp"
        android:background="@drawable/main_btn_bg"
        android:textColor="@color/white"/>
</LinearLayout>
</LinearLayout>
