<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_conversation"
        android:textColor="#0A1F44"
        android:id="@+id/txt_Open_conversion"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_marginStart="33dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snooze_conversation"
        android:textColor="#0A1F44"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_marginStart="33dp"/>

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Archive Conversation"-->
<!--        android:textColor="#0A1F44"-->
<!--        android:textSize="17sp"-->
<!--        android:textStyle="bold"-->
<!--        android:layout_marginTop="25dp"-->
<!--        android:layout_marginStart="33dp"/>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mark_as_priority"
        android:textColor="#0A1F44"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_marginStart="33dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_conversation"
        android:textColor="#0A1F44"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_marginStart="33dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_member"
        android:textColor="#3B5998"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_marginStart="33dp"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loadingProgress"
        android:layout_width="@dimen/_100sdp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_height="@dimen/_100sdp" />

</LinearLayout>